--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,9 @@
     "require": {
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
-        "golchha21/resmushit": "^1.2",
         "intervention/image": "^2.6",
         "laravel/framework": "5.8.*",
-        "laravel/tinker": "^1.0",
-        "spatie/image-optimizer": "^1.4"
+        "laravel/tinker": "^1.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
