--- a/.env.example
+++ b/.env.example
@@ -24,11 +24,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=tls
+MAIL_HOST=smtp.timeweb.ru
+MAIL_PORT=465
+MAIL_USERNAME="agent@cruiselines.pro"
+MAIL_PASSWORD="udzv3igZ2pmT"
+MAIL_ENCRYPTION=SSL
+MAIL_FROM_ADDRESS="agent@cruiselines.pro"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
